test/must_fail/spice_model_nets_count.ngjs
#!/usr/bin/env ngspicejs
// Spice model net counts wrong
// linter: ngspicejs-lint
"use strict";

resistor('R1', 1, 2, 100);
sub('X1', 'MY_CLAMP', [1, 2, 3, 4, 5, 6, 7, 8, 0]);

tran().run();

